--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ html{
 body{
     background: var(--bg-color);
     color: var(--text-color);
+    overflow-x: hidden;
 }
 
 section{
@@ -413,12 +414,14 @@ body::-webkit-scrollbar {
         position: absolute;
         top: 100%;
         left: 0;
+        right: 0;
         width: 100%;
         padding: 1rem 3%;
         background: var(--bg-color);
         border-top: .1rem solid rgba(0, 0, 0, .2);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
         display: none;
+        overflow-x: hidden;
     }
 
     .navbar.active{
